chatnode/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatfrontend
  namespace: recon
spec:
  selector:
    matchLabels:
      app: chatfrontend
  template:
    metadata:
      labels:
        app: chatfrontend
    spec:
      containers:
        - name: chat-frontend
          image: onyeechris/reconcile-frontend:dev-28
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: chatfrontendsvc
  namespace: recon
spec:
  selector:
    app: chatfrontend
  ports:
    - port: 80
      targetPort: 80
