chatnode/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: chatnode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "350"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "350"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "350"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:

  # tls:
  #   - hosts:
  #       - api.hccloudtech.online
  #       - admin.hccloudtech.online
  #     secretName: chatn-key

  rules:
    - host: api.hccloudtech.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbackendsvc
                port:
                  number: 80

    - host: admin.hccloudtech.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatfrontendsvc
                port:
                  number: 80
